# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reperio"
version = "0.1.0"
description = "Reperio is a visualization utility for Apache Nutch CrawlDB, LinkDB and HostDB data structures."
readme = "README.md"
authors = ["lewismc <lewismc@apache.org>"]
license = "Apache Software License 2.0"
repository = "https://github.com/lewismc/reperio"
homepage = "https://github.com/lewismc/reperio"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["nutch", "visualization", "graph", "crawl", "web-crawling", "networkx"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.extras]
hdfs = ["pyarrow"]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"reperio" = "reperio.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.21.1"}
rich = "^13.7.1"
networkx = "^3.3"
hadoop = {git = "https://github.com/opaque-systems/sequencefile.git"}
click = "^8.1.7"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyarrow = {version = "^14.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-html = "^3.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.1"
ruff = "^0.15.0"
pre-commit = "^4.5.1"
coverage = "^7.13.4"
coverage-badge = "^1.1.0"
safety = "^3.2.13"
darglint = "^1.8.1"

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# https://beta.ruff.rs/docs/rules/
select = ["E", "W", "F", "I"]
extend-select = ["I"]
ignore = ["F401"]

# Exclude a variety of commonly ignored directories.
respect-gitignore = true
ignore-init-module-imports = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "reperio"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
